# aoc2023

./: .gitignore  Cargo.toml
benches/: benchmark.rs
include_aoc/: Cargo.toml
include_aoc/src/: lib.rs
solutions/: Cargo.toml
solutions/benches/: benchmark.rs
solutions/src/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
src/: day1.rs  day2.rs  day3.rs  day4.rs  lib.rs  main.rs
