[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

[dependencies]
aho-corasick = "1.1.2"
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["cargo"] }
itertools = "0.12.0"
once_cell = "1.18.0"
regex = "1.10.2"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
