[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

[dependencies]
aho-corasick = "1.1.2"
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.4.10", features = ["cargo"] }
include_aoc = { path = "../include_aoc" }
itertools = "0.12.0"
num-derive = "0.4.1"
once_cell = "1.18.0"
regex = "1.10.2"
strum = { version = "0.25.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
